--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,13 @@
 //color
+$dark-grey: #333333;
+$grey:#666;
+$off-white:#f7f7f7;
+$blue:#1c88bf;
+$dark-blue:#364051;
+//font-size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
+//size
 $s-size: 1.2rem;
 $m-size: 1.6rem ;
 $l-size: 3.2rem ;
